objects/AsiaProfitCalculation__c.object
<CustomObject>
    <fields>
        <fullName>Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ProfitCalculation_Approver</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AsiaProjectMaster__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project No</label>
        <referenceTo>AsiaProjectMaster__c</referenceTo>
        <relationshipName>ProfitCalculation_AsiaProjectMaster</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BranchNo__c</fullName>
        <label>Branch No</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompanyName__c</fullName>
        <label>Company</label>
        <picklist>
            <picklistValues>
                <fullName>JEOL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JEOL ASIA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <picklist>
            <picklistValues>
                <fullName>ASIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ConsumptionTaxAmount__c</fullName>
        <label>Consumption Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ContractAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.CustomerSituation__c</field>
                <operation>equals</operation>
                <value>有効</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>JEOL Asia</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Quotation (Contract Account)</relationshipLabel>
        <relationshipName>ProfitCalculation_ContractAccount</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContractAccount_dummyField__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ContractAccount_dummyField</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.CustomerSituation__c</field>
                <operation>equals</operation>
                <value>有効</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>JEOL Asia</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Quotation (ContractAccount_dummyField)</relationshipLabel>
        <relationshipName>ProfitCalculation_ContractAccount_dummy</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContractAddress__c</fullName>
        <label>Contract Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractAgency__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contracyt Agency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ContractBelong__c</fullName>
        <label>Contract Belong</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractCode__c</fullName>
        <label>Contract Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractContact_dummyField__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Visualforce画面にて検索ダイアログを出すためだけに使用。
値は入れないようにしてください。</description>
        <label>ContractContact_dummyField</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>JEOL Asia</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Quotation (ContractContact_dummyField)</relationshipLabel>
        <relationshipName>ProfitCalculation_ContractContact_dummy</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContractCountry__c</fullName>
        <label>Contract Country</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractEmail__c</fullName>
        <label>Contract Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ContractFax__c</fullName>
        <label>Contract Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ContractName1__c</fullName>
        <label>Contract Name 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractName2__c</fullName>
        <label>Contract Name 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractName__c</fullName>
        <label>Contract Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractPersonInCharge__c</fullName>
        <label>Contract Person In Charge</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractPhone__c</fullName>
        <label>Contract Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ContractPost__c</fullName>
        <label>Contract Post</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractPostalCode__c</fullName>
        <label>Contract Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractUndergraduate__c</fullName>
        <label>Contract Undergraduate</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDateFormula__c</fullName>
        <formula>DateValue(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CustomReductionAmount1__c</fullName>
        <label>Custom Reduction Amount 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CustomReductionAmount2__c</fullName>
        <label>Custom Reduction Amount 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CustomReductionAmount3__c</fullName>
        <label>Custom Reduction Amount 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CustomReductionName1__c</fullName>
        <defaultValue>&quot;Special Discount&quot;</defaultValue>
        <label>Custom Reduction Name 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomReductionName2__c</fullName>
        <label>Custom Reduction Name 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomReductionName3__c</fullName>
        <label>Custom Reduction Name 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerPurchaseOrder__c</fullName>
        <label>Customer PO</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeliveryCondition1__c</fullName>
        <label>Delivery Condition 1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeliveryCondition2__c</fullName>
        <label>Delivery Condition 2</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeliveryCondition3__c</fullName>
        <label>Delivery Condition 3</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeliveryDate_ArbitrarilyTitle__c</fullName>
        <label>Delivery Date Arbitrarily Title</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeliveryDate_Arbitrarily__c</fullName>
        <label>Delivery Date Arbitrarily</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeliveryDeadline__c</fullName>
        <label>Delivery Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DeliveryPeriod__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Delivery Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EscalateCommentLabel__c</fullName>
        <label>Escalation Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EscalateComment__c</fullName>
        <label>Escalate Comment</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GrandTotal__c</fullName>
        <label>Grand Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsApprovalRequestEscalated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsApprovalRequestEscalated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsRequesterApprover__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the requester is a member of the public group of the approvers.
(Used to avoid to send emails about these quotations to the approvers)</description>
        <label>IsRequesterApprover</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IssueDateYyyyMm__c</fullName>
        <formula>LEFT(SUBSTITUTE(TEXT(IssueDate__c),&quot;-&quot;,&quot;&quot;),6)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IssueDateYearMonth</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IssueDate__c</fullName>
        <label>Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JProdCostCurrency__c</fullName>
        <label>JProdCostCurrency</label>
        <picklist>
            <picklistValues>
                <fullName>USD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SGD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JPY</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ModelTypeScreen__c</fullName>
        <label>ModelTypeScreen</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OfferAmount__c</fullName>
        <label>Offer Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrgAddress__c</fullName>
        <label>Organization Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OrgFax__c</fullName>
        <label>Organization Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>OrgName__c</fullName>
        <defaultValue>$User.CompanyName</defaultValue>
        <label>Organization Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrgPhone__c</fullName>
        <label>Organization Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>OtherText__c</fullName>
        <label>Other Text</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OutputConsumptionTaxAmount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Output Consumption Tax Amount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OutputSubtitle__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Output Subtotal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OutputSubtotalReduction1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Output Subtotal Reduction 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OutputSubtotalReduction2__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Output Subtotal Reduction 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OutputTotalAmount__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Output Total Amount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OutputTotalTaxAmount__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Output Total Tax Amount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PaymentConditionSection__c</fullName>
        <label>Payment Condition Section</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PaymentConditionTextarea__c</fullName>
        <label>Payment Condition Textarea</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Print2SPDetail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Print Spare Parts Detail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PrintJeolTerms__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Print JEOL Terms &amp; Conditions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PrintNotDetailAmounts__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Do not print detail amounts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PrintNotPhoneSalespeople__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Do not print salespeople phone numbers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PrintProformaInvoice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Print Proforma Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PrintQuantityUnit__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Print Quantity Unit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PrintQuotationBudgetPurpose__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Quotation for budgetary purposes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PrintQuotationFirstPage__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Print First Page</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PrintQuotationSpecificationsPage__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Print Specifications Page</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PrintUnitPrice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Print Unit Price</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProfitCalculationNo__c</fullName>
        <label>Quotation No.</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProfitCalculationType__c</fullName>
        <description>DO NOT USE the value of this field
This field is for technical purposes only and this picklist contains the same values than the Record Type (used to be able to sort the record types in the picklists)</description>
        <label>Quotation Type</label>
        <picklist>
            <picklistValues>
                <fullName>Unit</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>SVC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ProfitCalculation_BranchNo_Sync__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>ProfitCalculation Branch Sync</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>QuoteExpirationDate__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QuoteValidityPeriodDays__c</fullName>
        <label>Validity Period (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QuoteValidityPeriod__c</fullName>
        <label>Validity Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RejectCommentLabel__c</fullName>
        <label>Reject Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RejectComment__c</fullName>
        <label>Reject Comment</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Requester__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requester</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Quotation_Requester</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesAssistantAsia__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SalesAssistantAsia</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.IsAsiaUser__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>ProfitCalculation_SalesAssistantAsia</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesAssistantCode__c</fullName>
        <formula>SalesAssistant__r.UserCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Assistant Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesAssistantUS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SalesAssistantUS</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ProfitCalculation_SalesAssistantUS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesAssistant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Assistant</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ProfitCalculation_SalesAssistant</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesCurrencyLabel__c</fullName>
        <description>Used in Quotation Print screen for the label &apos;All Prices are in ########.&apos;</description>
        <formula>CASE(TEXT(SalesCurrency__c), &apos;USD&apos;, &apos;US Dollars&apos;, &apos;SGD&apos;, &apos;Singapore Dollars&apos;, &apos;AUD&apos;, &apos;Australian Dollars&apos;, TEXT(SalesCurrency__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SalesCurrencyLabel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesCurrency__c</fullName>
        <label>Currency</label>
        <picklist>
            <picklistValues>
                <fullName>SGD</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>USD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JPY</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SalesPersonAsia__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SalesPersonAsia</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.IsAsiaUser__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>ProfitCalculation_SalesPersonAsia</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesPersonCode__c</fullName>
        <formula>SalesPerson__r.UserCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Person Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesPersonUS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SalesPersonUS</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ProfitCalculation_SalesPersonUS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesPerson__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Salesperson</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ProfitCalculation_SalesPerson</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesPipelineLkup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Pipeline</label>
        <referenceTo>SalesPipeline__c</referenceTo>
        <relationshipName>ProfitCalculation_SalesPipelineLkup</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Series__c</fullName>
        <label>Series</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipmentAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipment Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.CustomerSituation__c</field>
                <operation>equals</operation>
                <value>有効</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>JEOL Asia</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Quotation (Shipment Account)</relationshipLabel>
        <relationshipName>ProfitCalculation_ShipmentAccount</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ShipmentAccount_dummyField__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ShipmentAccount_dummyField</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.CustomerSituation__c</field>
                <operation>equals</operation>
                <value>有効</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>JEOL Asia</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Quotation (ShipmentAccount_dummyField)</relationshipLabel>
        <relationshipName>ProfitCalculation_ShipmentAccount_dummy</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ShipmentAddress__c</fullName>
        <label>Shipment Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipmentAgency__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Shipment Agency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ShipmentBelong__c</fullName>
        <label>Shipment Belong</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipmentCode__c</fullName>
        <label>Shipment Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipmentContact_dummyField__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ShipmentContact_dummyField</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>JEOL Asia</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Quotation (ShipmentContact_dummyField)</relationshipLabel>
        <relationshipName>ProfitCalculation_ShipmentContact_dummy</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ShipmentCountry__c</fullName>
        <label>Shipment Country</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipmentDistanceSection__c</fullName>
        <label>Shipment Distance Section</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipmentDistanceZone__c</fullName>
        <label>Shipment Distance Zone</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipmentEmail__c</fullName>
        <label>Shipment Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ShipmentFax__c</fullName>
        <label>Shipment Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ShipmentName1__c</fullName>
        <label>Shipment Name 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipmentName2__c</fullName>
        <label>Shipment Name 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipmentName__c</fullName>
        <label>Shipment Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipmentPersonInCharge__c</fullName>
        <label>Shipment Person In Charge</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipmentPhone__c</fullName>
        <label>Shipment Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ShipmentPost__c</fullName>
        <label>Shipment Post</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipmentPostalCode__c</fullName>
        <label>Shipment Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipmentUndergraduate__c</fullName>
        <label>Shipment Undergraduate</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StandardOfferAmount__c</fullName>
        <label>Standard Offer Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StatusLabel__c</fullName>
        <description>Updated by trigger
Used for showing the history</description>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
                <color>#FFCC33</color>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
                <color>#FF9966</color>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
                <color>#FF99FF</color>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
                <color>#CC66CC</color>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
                <color>#CC33CC</color>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
                <color>#33CC00</color>
            </picklistValues>
            <picklistValues>
                <fullName>51</fullName>
                <color>#66FF99</color>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
                <color>#3366FF</color>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
                <color>#FF0000</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SubtitleLabel__c</fullName>
        <defaultValue>&quot;Subtotal&quot;</defaultValue>
        <label>Subtotal Label</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subtitle__c</fullName>
        <label>Subtitle</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SubtotalACostUnit__c</fullName>
        <label>Subtotal A (JProd Cost Unit)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SubtotalADiscountRate__c</fullName>
        <label>SubtotalADiscountRate</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SubtotalADiscountType__c</fullName>
        <label>Subtotal A Discount Type</label>
        <picklist>
            <picklistValues>
                <fullName>Rate</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Value</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SubtotalADiscount__c</fullName>
        <label>SubtotalADiscount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SubtotalASalesUnit__c</fullName>
        <label>Subtotal A (Sales Unit)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SubtotalA__c</fullName>
        <label>SubtotalA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SubtotalB__c</fullName>
        <label>Subtotal B</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SubtotalC__c</fullName>
        <label>Subtotal C</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SubtotalD__c</fullName>
        <label>Subtotal D</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SubtotalE__c</fullName>
        <label>Subtotal E</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SubtotalF__c</fullName>
        <label>Subtotal F</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SubtotalReduction1PlusMinus__c</fullName>
        <label>Subtotal Reduction 1 Plus Minus</label>
        <picklist>
            <picklistValues>
                <fullName>+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-</fullName>
                <default>true</default>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SubtotalReduction2PlusMinus__c</fullName>
        <label>Subtotal Reduction 2 Plus Minus</label>
        <picklist>
            <picklistValues>
                <fullName>+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-</fullName>
                <default>true</default>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>